[package]

name = "gnunet"
version = "0.0.15"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Bindings for GNUnet: GNU's framework for secure peer-to-peer networking"
documentation = "http://canndrew.org/rust-doc/gnunet"
license = "GPL-3.0"
readme = "README.md"
keywords = ["gnunet", "gns", "p2p"]

[dependencies]
unix_socket = "0.5"
rand = "0.3"
byteorder = "0.5"
rust-crypto = "0.2.36"
num = "0.1.24"
regex = "0.1.71"
gj = "0.2"
gjio = "0.1.3"
snafu = "0.6.8"
thiserror = "1.0.18"
libc = "0.2.70"
num-derive = "0.3.0"
num-traits = "0.2.11"
bitflags = "1.2.1"
