[package]
name = "gnunet"
version = "0.0.15"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Bindings for GNUnet: GNU's framework for secure peer-to-peer networking"
documentation = "http://canndrew.org/rust-doc/gnunet"
license = "GPL-3.0"
readme = "README.md"
keywords = ["gnunet", "gns", "p2p"]
edition = "2018"

[dependencies]
rand = "0.3"
byteorder = "0.5"
rust-crypto = "0.2.36"
num = "0.1.24"
regex = "0.1.71"
thiserror = "1.0.18"
libc = "0.2.70"
num-derive = "0.3.0"
num-traits = "0.2.11"
bitflags = "1.2.1"
async-std = { version = "1.5.0", features = ["attributes"] }
futures = "0.3.5" # futures_util
tracing = "0.1.14"
tracing-futures = { version = "0.2.4", features = ["std-future"], default-features = false }

[dev-dependencies]
tracing-subscriber = "0.2.5"
